syntax = "proto3";

option go_package = "github.com/MikkelBKristensen/DSHandins/Tree/Main/HandIn3_ChittyChat/ChittyChat_service/gRPC";

package ChittyChat_service;

service ChittyChat {

  rpc ChatService(stream ClientMessage) returns (stream ServerMessage);

}

message ClientMessage {
  string Username = 1;
  string Message = 2;
  int32 Timestamp = 3;
}
message ServerMessage {
  string Username = 1;
  string Message = 2;
  int32 Timestamp = 3;
}

